--- a/GAN_self_try.ipynb
+++ b/GAN_self_try.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPZsLNiofDtkCWakqAlANxG",
+      "authorship_tag": "ABX9TyNxB2pfkY7lCe6LGMLOSysT",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -300,7 +300,7 @@
         "        # Adversarial ground truths\n",
         "        valid = torch.ones(real_images.size(0), 1, device=device)\n",
         "        fake = torch.zeros(real_images.size(0), 1, device=device)\n",
-        "       o # Configure input\n",
+        "        # Configure input\n",
         "        real_images = real_images.to(device)\n",
         "\n",
         "        # ---------------------\n",
@@ -358,20 +358,127 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 111
+          "base_uri": "https://localhost:8080/"
         },
         "id": "ks94y0EK_fni",
-        "outputId": "a9f3afd1-dd0b-4e26-b74e-90103247a139"
+        "outputId": "92045486-9ce7-4a37-da21-7fb3f1043714"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "unindent does not match any outer indentation level (<tokenize>, line 9)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<tokenize>\"\u001b[0;36m, line \u001b[0;32m9\u001b[0m\n\u001b[0;31m    o # Configure input\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unindent does not match any outer indentation level\n"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch [1/10]                        Batch 100/1563 Discriminator Loss: 0.5495 Generator Loss: 1.5477\n",
+            "Epoch [1/10]                        Batch 200/1563 Discriminator Loss: 0.8036 Generator Loss: 0.8763\n",
+            "Epoch [1/10]                        Batch 300/1563 Discriminator Loss: 0.6113 Generator Loss: 1.2012\n",
+            "Epoch [1/10]                        Batch 400/1563 Discriminator Loss: 0.8545 Generator Loss: 0.8410\n",
+            "Epoch [1/10]                        Batch 500/1563 Discriminator Loss: 0.5737 Generator Loss: 1.2407\n",
+            "Epoch [1/10]                        Batch 600/1563 Discriminator Loss: 0.5622 Generator Loss: 1.0217\n",
+            "Epoch [1/10]                        Batch 700/1563 Discriminator Loss: 0.6917 Generator Loss: 1.0435\n",
+            "Epoch [1/10]                        Batch 800/1563 Discriminator Loss: 0.7806 Generator Loss: 0.9141\n",
+            "Epoch [1/10]                        Batch 900/1563 Discriminator Loss: 0.5485 Generator Loss: 1.0855\n",
+            "Epoch [1/10]                        Batch 1000/1563 Discriminator Loss: 0.6742 Generator Loss: 1.4930\n",
+            "Epoch [1/10]                        Batch 1100/1563 Discriminator Loss: 0.7052 Generator Loss: 1.0680\n",
+            "Epoch [1/10]                        Batch 1200/1563 Discriminator Loss: 0.7140 Generator Loss: 0.9817\n",
+            "Epoch [1/10]                        Batch 1300/1563 Discriminator Loss: 0.7285 Generator Loss: 0.9200\n",
+            "Epoch [1/10]                        Batch 1400/1563 Discriminator Loss: 0.5787 Generator Loss: 0.9784\n",
+            "Epoch [1/10]                        Batch 1500/1563 Discriminator Loss: 0.7683 Generator Loss: 0.6913\n",
+            "Epoch [2/10]                        Batch 100/1563 Discriminator Loss: 0.6001 Generator Loss: 0.8533\n",
+            "Epoch [2/10]                        Batch 200/1563 Discriminator Loss: 0.7490 Generator Loss: 0.9097\n",
+            "Epoch [2/10]                        Batch 300/1563 Discriminator Loss: 0.6821 Generator Loss: 0.8228\n",
+            "Epoch [2/10]                        Batch 400/1563 Discriminator Loss: 0.6561 Generator Loss: 0.8925\n",
+            "Epoch [2/10]                        Batch 500/1563 Discriminator Loss: 0.5510 Generator Loss: 1.4131\n",
+            "Epoch [2/10]                        Batch 600/1563 Discriminator Loss: 0.7896 Generator Loss: 0.8893\n",
+            "Epoch [2/10]                        Batch 700/1563 Discriminator Loss: 0.5851 Generator Loss: 0.9102\n",
+            "Epoch [2/10]                        Batch 800/1563 Discriminator Loss: 0.9220 Generator Loss: 0.6713\n",
+            "Epoch [2/10]                        Batch 900/1563 Discriminator Loss: 0.9864 Generator Loss: 0.8228\n",
+            "Epoch [2/10]                        Batch 1000/1563 Discriminator Loss: 0.6802 Generator Loss: 1.0722\n",
+            "Epoch [2/10]                        Batch 1100/1563 Discriminator Loss: 0.5866 Generator Loss: 0.9252\n",
+            "Epoch [2/10]                        Batch 1200/1563 Discriminator Loss: 0.7764 Generator Loss: 0.8371\n",
+            "Epoch [2/10]                        Batch 1300/1563 Discriminator Loss: 0.5709 Generator Loss: 1.0132\n",
+            "Epoch [2/10]                        Batch 1400/1563 Discriminator Loss: 0.6759 Generator Loss: 0.9872\n",
+            "Epoch [2/10]                        Batch 1500/1563 Discriminator Loss: 0.5796 Generator Loss: 1.1274\n",
+            "Epoch [3/10]                        Batch 100/1563 Discriminator Loss: 0.6654 Generator Loss: 1.0198\n",
+            "Epoch [3/10]                        Batch 200/1563 Discriminator Loss: 0.6148 Generator Loss: 1.1750\n",
+            "Epoch [3/10]                        Batch 300/1563 Discriminator Loss: 0.5758 Generator Loss: 1.2788\n",
+            "Epoch [3/10]                        Batch 400/1563 Discriminator Loss: 0.5510 Generator Loss: 1.0811\n",
+            "Epoch [3/10]                        Batch 500/1563 Discriminator Loss: 0.6275 Generator Loss: 1.3008\n",
+            "Epoch [3/10]                        Batch 600/1563 Discriminator Loss: 0.6187 Generator Loss: 0.9642\n",
+            "Epoch [3/10]                        Batch 700/1563 Discriminator Loss: 0.5528 Generator Loss: 1.1669\n",
+            "Epoch [3/10]                        Batch 800/1563 Discriminator Loss: 0.5646 Generator Loss: 0.9319\n",
+            "Epoch [3/10]                        Batch 900/1563 Discriminator Loss: 0.6243 Generator Loss: 0.8005\n",
+            "Epoch [3/10]                        Batch 1000/1563 Discriminator Loss: 0.5828 Generator Loss: 1.0580\n",
+            "Epoch [3/10]                        Batch 1100/1563 Discriminator Loss: 0.7955 Generator Loss: 0.8181\n",
+            "Epoch [3/10]                        Batch 1200/1563 Discriminator Loss: 0.4297 Generator Loss: 1.6607\n",
+            "Epoch [3/10]                        Batch 1300/1563 Discriminator Loss: 0.5850 Generator Loss: 0.7441\n",
+            "Epoch [3/10]                        Batch 1400/1563 Discriminator Loss: 0.7741 Generator Loss: 0.7628\n",
+            "Epoch [3/10]                        Batch 1500/1563 Discriminator Loss: 0.6182 Generator Loss: 1.1043\n",
+            "Epoch [4/10]                        Batch 100/1563 Discriminator Loss: 0.7645 Generator Loss: 0.8195\n",
+            "Epoch [4/10]                        Batch 200/1563 Discriminator Loss: 0.5423 Generator Loss: 0.9048\n",
+            "Epoch [4/10]                        Batch 300/1563 Discriminator Loss: 0.5776 Generator Loss: 1.3236\n",
+            "Epoch [4/10]                        Batch 400/1563 Discriminator Loss: 0.6575 Generator Loss: 0.8681\n",
+            "Epoch [4/10]                        Batch 500/1563 Discriminator Loss: 0.5461 Generator Loss: 1.2281\n",
+            "Epoch [4/10]                        Batch 600/1563 Discriminator Loss: 0.5515 Generator Loss: 0.8448\n",
+            "Epoch [4/10]                        Batch 700/1563 Discriminator Loss: 0.7874 Generator Loss: 1.1791\n",
+            "Epoch [4/10]                        Batch 800/1563 Discriminator Loss: 0.5859 Generator Loss: 1.2838\n",
+            "Epoch [4/10]                        Batch 900/1563 Discriminator Loss: 0.5533 Generator Loss: 1.1488\n",
+            "Epoch [4/10]                        Batch 1000/1563 Discriminator Loss: 0.7893 Generator Loss: 0.7621\n",
+            "Epoch [4/10]                        Batch 1100/1563 Discriminator Loss: 0.6376 Generator Loss: 0.8597\n",
+            "Epoch [4/10]                        Batch 1200/1563 Discriminator Loss: 0.6048 Generator Loss: 1.2382\n",
+            "Epoch [4/10]                        Batch 1300/1563 Discriminator Loss: 0.6286 Generator Loss: 1.0968\n",
+            "Epoch [4/10]                        Batch 1400/1563 Discriminator Loss: 0.4536 Generator Loss: 1.1608\n",
+            "Epoch [4/10]                        Batch 1500/1563 Discriminator Loss: 0.4502 Generator Loss: 1.3191\n",
+            "Epoch [5/10]                        Batch 100/1563 Discriminator Loss: 0.4367 Generator Loss: 1.1131\n",
+            "Epoch [5/10]                        Batch 200/1563 Discriminator Loss: 0.4377 Generator Loss: 1.1618\n",
+            "Epoch [5/10]                        Batch 300/1563 Discriminator Loss: 0.5647 Generator Loss: 1.1850\n",
+            "Epoch [5/10]                        Batch 400/1563 Discriminator Loss: 0.5835 Generator Loss: 0.7762\n",
+            "Epoch [5/10]                        Batch 500/1563 Discriminator Loss: 0.5308 Generator Loss: 1.1723\n",
+            "Epoch [5/10]                        Batch 600/1563 Discriminator Loss: 0.5629 Generator Loss: 1.4239\n",
+            "Epoch [5/10]                        Batch 700/1563 Discriminator Loss: 0.4730 Generator Loss: 1.2657\n",
+            "Epoch [5/10]                        Batch 800/1563 Discriminator Loss: 0.7499 Generator Loss: 0.8737\n",
+            "Epoch [5/10]                        Batch 900/1563 Discriminator Loss: 0.7306 Generator Loss: 1.0781\n",
+            "Epoch [5/10]                        Batch 1000/1563 Discriminator Loss: 0.7053 Generator Loss: 1.0924\n",
+            "Epoch [5/10]                        Batch 1100/1563 Discriminator Loss: 0.6990 Generator Loss: 0.9021\n",
+            "Epoch [5/10]                        Batch 1200/1563 Discriminator Loss: 0.6035 Generator Loss: 1.2184\n",
+            "Epoch [5/10]                        Batch 1300/1563 Discriminator Loss: 0.6907 Generator Loss: 0.8353\n",
+            "Epoch [5/10]                        Batch 1400/1563 Discriminator Loss: 0.6328 Generator Loss: 0.7172\n",
+            "Epoch [5/10]                        Batch 1500/1563 Discriminator Loss: 0.6663 Generator Loss: 0.9588\n",
+            "Epoch [6/10]                        Batch 100/1563 Discriminator Loss: 0.7747 Generator Loss: 0.8991\n",
+            "Epoch [6/10]                        Batch 200/1563 Discriminator Loss: 0.5760 Generator Loss: 1.1167\n",
+            "Epoch [6/10]                        Batch 300/1563 Discriminator Loss: 0.5913 Generator Loss: 0.7891\n",
+            "Epoch [6/10]                        Batch 400/1563 Discriminator Loss: 0.5982 Generator Loss: 1.4084\n",
+            "Epoch [6/10]                        Batch 500/1563 Discriminator Loss: 0.6105 Generator Loss: 1.3512\n",
+            "Epoch [6/10]                        Batch 600/1563 Discriminator Loss: 0.7123 Generator Loss: 1.0614\n",
+            "Epoch [6/10]                        Batch 700/1563 Discriminator Loss: 0.6082 Generator Loss: 1.0459\n",
+            "Epoch [6/10]                        Batch 800/1563 Discriminator Loss: 0.6083 Generator Loss: 1.4437\n",
+            "Epoch [6/10]                        Batch 900/1563 Discriminator Loss: 0.5815 Generator Loss: 1.2788\n",
+            "Epoch [6/10]                        Batch 1000/1563 Discriminator Loss: 1.0730 Generator Loss: 1.3078\n",
+            "Epoch [6/10]                        Batch 1100/1563 Discriminator Loss: 0.5532 Generator Loss: 1.1997\n",
+            "Epoch [6/10]                        Batch 1200/1563 Discriminator Loss: 0.8344 Generator Loss: 0.7464\n",
+            "Epoch [6/10]                        Batch 1300/1563 Discriminator Loss: 0.7077 Generator Loss: 1.1141\n",
+            "Epoch [6/10]                        Batch 1400/1563 Discriminator Loss: 0.6933 Generator Loss: 0.9938\n",
+            "Epoch [6/10]                        Batch 1500/1563 Discriminator Loss: 0.7924 Generator Loss: 0.8316\n",
+            "Epoch [7/10]                        Batch 100/1563 Discriminator Loss: 0.5886 Generator Loss: 1.6822\n",
+            "Epoch [7/10]                        Batch 200/1563 Discriminator Loss: 0.4743 Generator Loss: 1.0140\n",
+            "Epoch [7/10]                        Batch 300/1563 Discriminator Loss: 0.5840 Generator Loss: 0.9587\n",
+            "Epoch [7/10]                        Batch 400/1563 Discriminator Loss: 0.7154 Generator Loss: 0.9760\n",
+            "Epoch [7/10]                        Batch 500/1563 Discriminator Loss: 0.5521 Generator Loss: 1.5168\n",
+            "Epoch [7/10]                        Batch 600/1563 Discriminator Loss: 0.5277 Generator Loss: 1.1573\n",
+            "Epoch [7/10]                        Batch 700/1563 Discriminator Loss: 0.5675 Generator Loss: 1.1791\n",
+            "Epoch [7/10]                        Batch 800/1563 Discriminator Loss: 0.3567 Generator Loss: 1.7156\n",
+            "Epoch [7/10]                        Batch 900/1563 Discriminator Loss: 0.5460 Generator Loss: 1.3088\n",
+            "Epoch [7/10]                        Batch 1000/1563 Discriminator Loss: 0.5573 Generator Loss: 1.1311\n",
+            "Epoch [7/10]                        Batch 1100/1563 Discriminator Loss: 0.9045 Generator Loss: 0.6427\n",
+            "Epoch [7/10]                        Batch 1200/1563 Discriminator Loss: 0.5489 Generator Loss: 1.3369\n",
+            "Epoch [7/10]                        Batch 1300/1563 Discriminator Loss: 0.3953 Generator Loss: 1.5195\n",
+            "Epoch [7/10]                        Batch 1400/1563 Discriminator Loss: 0.4365 Generator Loss: 1.5837\n",
+            "Epoch [7/10]                        Batch 1500/1563 Discriminator Loss: 0.4971 Generator Loss: 1.4480\n",
+            "Epoch [8/10]                        Batch 100/1563 Discriminator Loss: 0.5990 Generator Loss: 0.6548\n",
+            "Epoch [8/10]                        Batch 200/1563 Discriminator Loss: 0.4333 Generator Loss: 0.8818\n",
+            "Epoch [8/10]                        Batch 300/1563 Discriminator Loss: 0.5839 Generator Loss: 1.6767\n",
+            "Epoch [8/10]                        Batch 400/1563 Discriminator Loss: 0.5587 Generator Loss: 0.8946\n",
+            "Epoch [8/10]                        Batch 500/1563 Discriminator Loss: 0.4018 Generator Loss: 1.9121\n"
           ]
         }
       ]
